<resources>
    <string name="app_name">BopIt</string>

    //Pantalla de juego
    <string name="puntuacion">Puntuación actual</string>
    <string name="puntuacion_inicial">00</string>

    //Pantalla "Home"
    <string name="tituloHome">Bop It Mobile</string>
    <string name="textoBotonJugar">Jugar</string>
    <string name="textoBotonAcercaDe">Acerca de</string>
    <string name="textoBotonPreferencias">Preferencias</string>

    //Pantalla "Acerca De"
    <string name="tituloAcercaDe">Acerca De</string>
    <string name="textoAcercaDe">Juego Bop It para dispositivos móviles, en este juego deberás realizar la acción que se muestre en pantalla antes de que se acabe el tiempo!</string>
    <string name="tituloEquipoDesarrollo">Equipo de desarrollo</string>
    <string name="textoEquipoDesarrollo">Esta aplicación fue desarrollada por Benjamín Rodríguez, estudiante de Ingeniería en Desarrollo de Videojuegos y Realidad Virtual.</string>

    //Pantalla "Preferencias"
    <string name="tituloPreferencias">Preferencias</string>
    <string name="seccion1">Configuración de la aplicación</string>
    <string name="seccion2">Configuración de la partida</string>
        <string name="DuracionSplashScreen">Duración Splash Screen</string>
        <string name="instrucciones">No volver a mostrar instrucciones</string>
        <string name="Dificultad">Nivel de dificultad</string>
        <string name="RecordActual">Record actual</string>

    <string name="title_activity_preferencias">PreferenciasActivity</string>

    //Pantalla final
    <string name="PuntajeMayorPrevio">Tu mejor puntaje previo era:</string>
    <string name="PuntajeObtenido">Tu puntaje obtenido en esta partida fue:</string>
    <string name="PuntajeMayorSuperado">Superaste el record, felicidades!</string>
    <string name="PuntajeMayorNoSuperado">No superaste el record, sigue jugando!</string>
    <string name="PuntajeMayorNuevo">Tu nuevo mejor puntaje es:</string>
    <string name="PuntajeMayorSeMantiene">El mejor puntaje sigue siendo:</string>
    <string name="BotonSalir">Volver al menú</string>

    //Diálogo de instrucciones
    <string name="TextoInstrucciones">Bienvenido a Bop It Mobile! \n\nLas instrucciones del juego son las siguientes: \nSe te pedirá que realices
        una acción determinada y solo tendrás un tiempo limitado para realizar esa acción, pero necesitas ser veloz! Ya que cada vez hay menos tiempo
    para reaccionar. \n\nObtén un mayor puntaje realizando la mayor cantidad de acciones que sea posible.
        \n\nEn \"Preferencias\" puedes modificar la dificultad inicial.</string>
    <string name="NoVolverAMostrar">No volver a mostrar</string>
    <string name="Cerrar">Cerrar</string>








    <!-- Preference Titles -->
    <string name="messages_header">Configuración Splash Screen</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>